--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.7.2
 crispy-bootstrap5==2024.2
 Django==5.0.3
 django-crispy-forms==2.1
+gunicorn==21.2.0
+packaging==24.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
 sqlparse==0.4.4
